--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ all_files = 1
 directory = invenio_collections/translations/
 
 [extract_messages]
+copyright_holder = CERN
+msgid_bugs_address = info@invenio-software.org
 mapping-file = babel.ini
 output-file = invenio_collections/translations/invenio.pot
 
