installation: invenio-base>=0.1.0
Signed-off-by: Jiri Kuncar <jiri.kuncar@cern.ch>

--- a/.travis.invenio.cfg
+++ b/.travis.invenio.cfg
@@ -37,5 +37,5 @@ PACKAGES = [
     'invenio_accounts',
     'invenio_formatter',
     'invenio_upgrader',
-    'invenio.base',
+    'invenio_base',
 ]
