--- a/.travis.invenio.cfg
+++ b/.travis.invenio.cfg
@@ -31,9 +31,7 @@ ASSETS_AUTO_BUILD = False
 
 PACKAGES = [
     'invenio_collections',
-    'invenio_search',
-    'invenio_knowledge',
-    'invenio_access',
+    # FIXME 'invenio_access',
     'invenio_accounts',
     'invenio_formatter',
     'invenio_upgrader',
