global: elasticsearch percolator configuration
Signed-off-by: Leonardo Rossi <leonardo.r@cern.ch>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 #
 # This file is part of Invenio.
-# Copyright (C) 2015 CERN.
+# Copyright (C) 2015, 2016 CERN.
 #
 # Invenio is free software; you can redistribute it
 # and/or modify it under the terms of the GNU General Public License as
@@ -37,8 +37,10 @@ recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs Makefile
 recursive-include examples *.py
+recursive-include examples *.json
 recursive-include invenio_collections *.html
 recursive-include tests *.py
+recursive-include tests *.json
 
 # added by check_manifest.py
 recursive-include invenio_collections *.po
