tests: integration of pytest-runner
Signed-off-by: Alizee Pace <alizee.pace@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,9 @@
 # as an Intergovernmental Organization or submit itself to any jurisdiction.
 
 
+[aliases]
+test=pytest
+
 [build_sphinx]
 source-dir = docs/
 build-dir = docs/_build
