installation: addition of PyPy classifiers
Signed-off-by: Alizee Pace <alizee.pace@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,12 @@ env:
 
 python:
   - "2.7"
-  - "3.3"
-  - "3.4"
   - "3.5"
+  - "pypy"
+
+matrix:
+  allow_failures:
+    - python: pypy
 
 before_script:
   - sleep 10
