--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -22,13 +22,15 @@
 # waive the privileges and immunities granted to it by virtue of its status
 # as an Intergovernmental Organization or submit itself to any jurisdiction.
 
-include .coveragerc
-include .dockerignore
-include .editorconfig
-include .tx/config
+
 include *.rst
 include *.sh
 include *.txt
+include .coveragerc
+include .dockerignore
+include .editorconfig
+include .lgtm MAINTAINERS
+include .tx/config
 include LICENSE
 include babel.ini
 include docs/requirements.txt
@@ -37,13 +39,11 @@ recursive-include docs *.bat
 recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs Makefile
-recursive-include examples *.py
 recursive-include examples *.json
+recursive-include examples *.py
 recursive-include invenio_collections *.html
-recursive-include tests *.py
-recursive-include tests *.json
-
-# added by check_manifest.py
-recursive-include invenio_collections *.po
 recursive-include invenio_collections *.mo
+recursive-include invenio_collections *.po
 recursive-include invenio_collections *.pot
+recursive-include tests *.json
+recursive-include tests *.py
