--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,9 @@ all_files = 1
 [bdist_wheel]
 universal = 1
 
+[pydocstyle]
+add_ignore = D401
+
 [compile_catalog]
 directory = invenio_collections/translations/
 
