--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,50 +1,32 @@
-# -*- coding: utf-8 -*-
+# # -*- coding: utf-8 -*-
 #
-# This file is part of Invenio.
 # Copyright (C) 2015, 2016 CERN.
+# Copyright (C) 2025 Ubiquity Press.
 #
-# Invenio is free software; you can redistribute it
-# and/or modify it under the terms of the GNU General Public License as
-# published by the Free Software Foundation; either version 2 of the
-# License, or (at your option) any later version.
+# Invenio-Collections is free software; you can redistribute it and/or modify
+# it under the terms of the MIT License; see LICENSE file for more details.
+
+# TODO: Generate this manifest file by running the following commands:
+# (please sort the lines in this file after running below commands)
 #
-# Invenio is distributed in the hope that it will be
-# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with Invenio; if not, write to the
-# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
-# MA 02111-1307, USA.
-#
-# In applying this license, CERN does not
-# waive the privileges and immunities granted to it by virtue of its status
-# as an Intergovernmental Organization or submit itself to any jurisdiction.
+#  git init
+#  git add -A
+#  pip install -e .[all]
+#  check-manifest -u
 
 
 include *.rst
 include *.sh
-include *.txt
-include .coveragerc
 include .dockerignore
 include .editorconfig
-include .lgtm MAINTAINERS
 include .tx/config
-include LICENSE
 include babel.ini
-include docs/requirements.txt
-include pytest.ini
+prune docs/_build
+recursive-include .github/workflows *.yml
 recursive-include docs *.bat
 recursive-include docs *.py
 recursive-include docs *.rst
+recursive-include docs *.txt
 recursive-include docs Makefile
-recursive-include examples *.json
-recursive-include examples *.py
-recursive-include invenio_collections *.html
-recursive-include invenio_collections *.mo
-recursive-include invenio_collections *.po
-recursive-include invenio_collections *.pot
-recursive-include invenio_collections *.py
-recursive-include tests *.json
+recursive-include invenio_collections/translations *.po *.pot *.mo
 recursive-include tests *.py
