global: extract code from Invenio-RDM-Records

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ var/
 Pipfile
 Pipfile.lock
 .venv/
+uv.lock
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
