--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requires-python = ">=3.9"
 dependencies = [
   "invenio-administration>=3.0.0,<4.0.0",
   "invenio-communities>=18.0.0,<19.0.0",
+  "invenio-rdm-records>=18.2.0",
   "invenio-records-resources>=7.0.0,<8.0.0",
   "invenio-search-ui>=4.0.0,<5.0.0",
 ]
@@ -28,6 +29,27 @@ tests=[
 opensearch2 = [
     "invenio-search[opensearch2]>=3.0.0,<4.0.0",
 ]
+
+[project.entry-points."invenio_base.apps"]
+invenio_collections = "invenio_collections.ext:InvenioCollections"
+
+[project.entry-points."invenio_base.api_apps"]
+invenio_collections = "invenio_collections.ext:InvenioCollections"
+
+[project.entry-points."invenio_base.api_blueprints"]
+invenio_collections = "invenio_collections.views:create_bp"
+
+[project.entry-points."invenio_celery.tasks"]
+invenio_collections = "invenio_collections.tasks"
+
+[project.entry-points."invenio_db.alembic"]
+invenio_collections = "invenio_collections:alembic"
+
+[project.entry-points."invenio_db.models"]
+invenio_collections = "invenio_collections.models"
+
+[project.entry-points."invenio_i18n.translations"]
+messages = "invenio_collections"
 
 [tool.setuptools.dynamic]
 version = {attr = "invenio_collections.__version__"}
